--- a/index.html
+++ b/index.html
@@ -16,31 +16,74 @@
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
           <!-- Latest compiled and minified JavaScript -->
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  
+
+           <!-- <script src="typeahead.js"></script> -->
+           <script src="https://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
+           <script src="https://twitter.github.io/typeahead.js/js/handlebars.js"></script>
+          <style>
+            #map {
+              height: 500px;
+            } 
+      </style>
     </head>
     <body>
       <div class="container">
-       <div class="col-md-4">
-         <h1>Search Trails</h1>
-          <form action="#" name="trail-search" class="js-search-form">
-            <label for="query"></label>
-            <input type="text" name="activity" class="js-activity" placeholder="Activity"><br>
-             <label for="query"></label>
-            <input type="text" name="city" class="js-city" placeholder="City"><br>
-             <label for="query"></label>
-            <input id="state" name="state" class="js-state" placeholder="State"><br>
-             <label for="query">Radius:</label>
-             <input type="range" id="myRange" value="100"><br>
-            <button type="submit">Search</button>
-          </form>
-      </div>
-      <main role="main" class="output" aria-live="assertive">
-        <div class="col-md-8">
-          <h2>Results</h2>
-          <div class="js-search-results">
+        <div class="row">
+         <div class="col-md-4">
+           <h1>Search Trails</h1>
+            <form action="#" name="trail-search" id="search-form">
+              <div class="form-group">
+                <label for="activity">Activity:</label>
+                <select name="activity" id="activity" placeholder="Activity">
+                  <option>select</option>
+                  <option value="hiking">Hiking</option>
+                  <option value="camping">Camping</option>
+                  <option value="biking">Biking</option><br>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="city">City:</label>
+                <input type="text" name="city" id="city" placeholder="City">
+              </div>
+              <div id="the-basics">
+                  <label for="state">State:</label>
+                <input class="typeahead" type="text" placeholder="State">
+              </div>
+
+              <!-- See if this is useful -->
+
+              <!-- <div class="form-group">              
+                <label for="myRange">Radius:</label>
+                <input type="range" id="myRange" value="100">
+              </div> -->
+              <button type="submit">Search</button>
+            </form>
+          </div>
+          <main role="main" class="output" aria-live="assertive">
+          <div class="col-md-8">
+            <h2>Results</h2>
+            <div id="search-results">
+            <div id="map"></div>
+            <!-- <div id="map"></div>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+    </script> -->
+   
+            </div>
+ 
           </div>
         </div>  
       </main>
       <script src="app.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5BRSSgrgK8EJ8998mi5CclUx2vjH7Tc0&callback=initialize"
+    ></script>
     </body>
 </html>
